--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-inventory",
   "version": "0.1.0",
+  "homepage": "https://margo4git.github.io/inventory/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
